--- a/playbooks/oracle_backup/validate_chunks.yml
+++ b/playbooks/oracle_backup/validate_chunks.yml
@@ -111,6 +111,9 @@
 - name: Prepare Metadata Directory 
   command: mkdir {{ metadata_working_directory }}
 
+- debug:
+    msg: "get_metadata_files.sh {{ db_backup_s3_bucket_name }}  {{ dbid }} {{ database_global_database }}  {{ metadata_working_directory }}/s3_metadata {{ num_of_days_back_to_validate }}"
+
 - name: Fetch Metadata Files from AWS to Local Working Directory
   script: get_metadata_files.sh {{ db_backup_s3_bucket_name }}  {{ dbid }} {{ database_global_database }}  {{ metadata_working_directory }}/s3_metadata {{ num_of_days_back_to_validate }}
   register: fetch_metadata
