--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -84,6 +84,7 @@ on:
       - DBA-511
     paths:
       - .github/workflows/oracle-backup.yml
+      - playbooks/oracle_backup/*
 
 # Allow permissions on repository and docker image respectively 
 permissions:
