--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -84,7 +84,6 @@ on:
       - DBA-511
     paths:
       - .github/workflows/oracle-backup.yml
-      - playbooks/oracle_backup/*
 
 # Allow permissions on repository and docker image respectively 
 permissions:
@@ -154,3 +153,8 @@ jobs:
           $validate_command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
           -e fix_absent_chunks=$FixAbsentChunks
+
+      - name: Start Ansible Delete DBIDs Not In Use
+        run: |
+          $delete_dbids_command -i $inventory \
+          -e rman_target=environment_name_delius_core_development_dev_$TargetHost
