--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -79,12 +79,6 @@ on:
         required: true
         type: string
 
-  push:
-    branches:
-      - DBA-511
-    paths:
-      - .github/workflows/oracle-backup.yml
-
 # Allow permissions on repository and docker image respectively 
 permissions:
   contents: read
@@ -141,18 +135,18 @@ jobs:
           aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - name: Start Ansible Backup
-      #   run: |
-      #     $backup_command -i $inventory \
-      #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
-      #     -e daily_weekly=$Period \
-      #     -e enable_trace=$EnableTrace
+      - name: Start Ansible Backup
+        run: |
+          $backup_command -i $inventory \
+          -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
+          -e daily_weekly=$Period \
+          -e enable_trace=$EnableTrace
 
-      # - name: Start Ansible Validate And Fix Absent Chunks
-      #   run: |
-      #     $validate_command -i $inventory \
-      #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
-      #     -e fix_absent_chunks=$FixAbsentChunks
+      - name: Start Ansible Validate And Fix Absent Chunks
+        run: |
+          $validate_command -i $inventory \
+          -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
+          -e fix_absent_chunks=$FixAbsentChunks
 
       - name: Start Ansible Delete DBIDs Not In Use
         run: |
