--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -79,6 +79,12 @@ on:
         required: true
         type: string
 
+  push:
+    branches:
+      - DBA-511
+    paths:
+      - .github/workflows/oracle-backup.yml
+
 # Allow permissions on repository and docker image respectively 
 permissions:
   contents: read
@@ -99,7 +105,7 @@ jobs:
       delete_dbids_command: ansible-playbook operations/playbooks/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost) || (github.event_name == 'schedule' && inputs.TargetHost) || (github.event_name == 'push' && 'delius_primarydb') }}"
-      Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period) || (github.event_name == 'schedule' && inputs.Period) }}"
+      Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period) || (github.event_name == 'schedule' && inputs.Period) || (github.event_name == 'push' && 'daily')   }}"
       FixAbsentChunks: "${{ github.event.inputs.FixAbsentChunks == '' && 'yes' || github.event.inputs.FixAbsentChunks }}"
       DeleteDefunct: "${{ github.event.inputs.DeleteDefunct == '' && 'no' || github.event.inputs.DeleteDefunct }}"
       EnableTrace: "${{ github.event.inputs.EnableTrace == '' && 'no' || github.event.inputs.EnableTrace }}"
@@ -150,7 +156,7 @@ jobs:
           -e fix_absent_chunks=$FixAbsentChunks
 
       - name: Start Ansible Delete DBIDs Not In Use
-        if: $DeleteDefunct == 'yes'
+        if: ${{ env.DeleteDefunct == 'yes' }}
         run: |
           $delete_dbids_command -i $inventory \
           -e rman_target=environment_name_delius_core_development_dev_$TargetHost
