--- a/playbooks/oracle_backup/fetch_inventory_files.yml
+++ b/playbooks/oracle_backup/fetch_inventory_files.yml
@@ -34,6 +34,9 @@
   set_fact:
     inventory_symlink: "{{ inventory_directory }}/symlink.txt"
 
+- debug: 
+    msg:  "{{ s3_oracledb_backups_inventory_arn }}/{{ db_backup_s3_bucket_name }}/{{ s3_oracledb_backups_inventory }}/hive/{{ link_today }}"
+
 # Get List of Available Symlink Files
 - name: Check for Availability of Todays Inventory file
   amazon.aws.aws_s3:
@@ -41,6 +44,8 @@
     prefix: "{{ db_backup_s3_bucket_name }}/{{ s3_oracledb_backups_inventory }}/hive/{{ link_today }}-"
     mode: list
   register: symlink_today
+
+- debug: var=symlink_today
 
 # First Attempt to get Todays Symlink File
 - name: Download Todays Symlink File
