--- a/playbooks/oracle_backup/fetch_inventory_files.yml
+++ b/playbooks/oracle_backup/fetch_inventory_files.yml
@@ -101,7 +101,8 @@
 - name: Unzip the Inventory File
   shell: |
     cd {{ inventory_directory }}
-    gzip --decompress {{ inventory_file }}.{{ file_idx }}.gz
+    #gzip --decompress {{ inventory_file }}.{{ file_idx }}.gz
+    gzip -d {{ inventory_file }}.{{ file_idx }}.gz
   loop: "{{ paths_to_inventory_files.splitlines() }}"
   loop_control:
     index_var: file_idx
