--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -1,4 +1,6 @@
-run-name: "Oracle: ${{ (github.event_name == 'workflow' || github.event_name == 'push') && 'delius' }}-daily-database-backup"
+run-name:
+    if: ((github.event_name == 'workflow' && startsWith(github.event.inputs.TargetHost,'delius')) || ( github.event_name == 'push'))
+        'delius-daily-database-backup'
 on:
   workflow_dispatch:
     inputs:
@@ -113,35 +115,38 @@ jobs:
     continue-on-error: false
     steps:
 
-      - name: Checkout hmpps-delius-operation-automation
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            playbooks/oracle_backup
-          path: operations
-          ref: ${{ inputs.SourceCodeVersion }}
-          fetch-depth: 0
+      - name: Testing run-name
+        run: echo "Testing run-name"
 
-      - name: Checkout modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
-          path: inventory
-          ref: ${{ inputs.SourceConfigVersion }}
-          fetch-depth: 0
+      # - name: Checkout hmpps-delius-operation-automation
+      #   uses: actions/checkout@v4
+      #   with:
+      #     sparse-checkout-cone-mode: false
+      #     sparse-checkout: |
+      #       playbooks/oracle_backup
+      #     path: operations
+      #     ref: ${{ inputs.SourceCodeVersion }}
+      #     fetch-depth: 0
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Checkout modernisation-platform-configuration-management
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: ministryofjustice/modernisation-platform-configuration-management
+      #     sparse-checkout-cone-mode: false
+      #     sparse-checkout: |
+      #       ansible/hosts
+      #       ansible/group_vars
+      #     path: inventory
+      #     ref: ${{ inputs.SourceConfigVersion }}
+      #     fetch-depth: 0
+
+      # - name: Configure AWS Credentials
+      #   id: login-aws
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
       # - name: Start Ansible Backup
       #   run: |
@@ -156,8 +161,8 @@ jobs:
       #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost \
       #     -e fix_absent_chunks=$FixAbsentChunks
 
-      - name: Start Ansible Delete DBIDs Not In Use
-        #if: ${{ env.DeleteDefunct == 'yes' }}
-        run: |
-          $delete_dbids_command -i $inventory \
-          -e rman_target=environment_name_delius_core_development_dev_$TargetHost
+      # - name: Start Ansible Delete DBIDs Not In Use
+      #   #if: ${{ env.DeleteDefunct == 'yes' }}
+      #   run: |
+      #     $delete_dbids_command -i $inventory \
+      #     -e rman_target=environment_name_delius_core_development_dev_$TargetHost
