--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -1,6 +1,4 @@
-run-name:
-    if: ((github.event_name == 'workflow' && startsWith(github.event.inputs.TargetHost,'delius')) || ( github.event_name == 'push'))
-        'delius-daily-database-backup'
+run-name: "Oracle: ${{ contains(fromJSON('["workflow_dispatch","schedule","push"]'), github.event_name) && (startsWith(github.event.inputs.TargetHost,'delius') && 'delius-daily-database-backup') }}"
 on:
   workflow_dispatch:
     inputs:
