--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -1,4 +1,4 @@
-run-name: "Oracle: ${{ (github.event_name == 'workflow' || github.event_name == 'push') && 'delius' }}-daily-database-backup"
+run-name: "Oracle: ${{ github.event_name == 'push' && 'delius' }}-daily-database-backup"
   workflow_dispatch:
     inputs:
       TargetHost:
@@ -113,7 +113,8 @@ jobs:
     steps:
 
       - name: Testing run-name
-        run: echo "Testing run-name"
+        run: |
+          echo "Testing run-name"
 
       # - name: Checkout hmpps-delius-operation-automation
       #   uses: actions/checkout@v4
