--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -1,4 +1,4 @@
-run-name: "Oracle: ${{ (contains('workflow_dispatch',github.event_name) || contains('push ',github.event_name)) && 'delius-delius-database-backup' }}"
+run-name: "Oracle: ${{ ( (github.event_name == 'workflow_dispatch') && ( startsWith(github.event.inputs.TargetHost,'delius') && format('{0}-{1}', github.event.inputs.Period,'-delius')) ) || (github.event_name == 'push' && 'daily-delius') }}-database-backup"
 on:
   workflow_dispatch:
     inputs:
@@ -113,35 +113,38 @@ jobs:
     continue-on-error: false
     steps:
 
-      - name: Checkout hmpps-delius-operation-automation
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            playbooks/oracle_backup
-          path: operations
-          ref: ${{ inputs.SourceCodeVersion }}
-          fetch-depth: 0
+      - name: Echo statement
+        run: echo "Echo statement"
 
-      - name: Checkout modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
-          path: inventory
-          ref: ${{ inputs.SourceConfigVersion }}
-          fetch-depth: 0
+      # - name: Checkout hmpps-delius-operation-automation
+      #   uses: actions/checkout@v4
+      #   with:
+      #     sparse-checkout-cone-mode: false
+      #     sparse-checkout: |
+      #       playbooks/oracle_backup
+      #     path: operations
+      #     ref: ${{ inputs.SourceCodeVersion }}
+      #     fetch-depth: 0
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+      # - name: Checkout modernisation-platform-configuration-management
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: ministryofjustice/modernisation-platform-configuration-management
+      #     sparse-checkout-cone-mode: false
+      #     sparse-checkout: |
+      #       ansible/hosts
+      #       ansible/group_vars
+      #     path: inventory
+      #     ref: ${{ inputs.SourceConfigVersion }}
+      #     fetch-depth: 0
+
+      # - name: Configure AWS Credentials
+      #   id: login-aws
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-access-key-id: ${{ secrets.CICD_ACCESS_KEY }}
+      #     aws-secret-access-key: ${{ secrets.CICD_SECRET_ACCESS_KEY }}
+      #     aws-region: ${{ secrets.AWS_REGION }}
 
       # - name: Start Ansible Backup
       #   run: |
