Change target host default

--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -14,7 +14,7 @@ on:
         description: "Backup target host"
         required: true
         type: choice
-        default: "delius_primarydb"
+        default: ""
         options: 
           - "delius_primarydb"
           - "mis_primarydb"
@@ -78,6 +78,10 @@ on:
 
   workflow_call:
     inputs:
+      TargetAccount:
+        description: "Target AWS Account [EC2 Tags: <environment-name>_<delius-environment-name>]"
+        required: true
+        type: string
       TargetHost:
         description: "Backup target host"
         required: true
@@ -113,7 +117,7 @@ jobs:
       validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       delete_dbids_command: ansible-playbook operations/playbooks/oracle_backup/delete_dbids_not_in_use.yml
       inventory: inventory/ansible
-      TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount) || (github.event_name == 'schedule' && inputs.TargetAccount) || (github.event_name == 'push' && 'delius-core-development-dev') }}"
+      TargetAccount: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetAccount) || (github.event_name == 'schedule' && inputs.TargetAccount) || (github.event_name == 'push' && 'delius_core_development_dev') }}"
       TargetHost: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.TargetHost) || (github.event_name == 'schedule' && inputs.TargetHost) || (github.event_name == 'push' && 'delius_primarydb') }}"
       Period: "${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.Period) || (github.event_name == 'schedule' && inputs.Period) || (github.event_name == 'push' && 'daily')   }}"
       FixAbsentChunks: "${{ github.event.inputs.FixAbsentChunks == '' && 'yes' || github.event.inputs.FixAbsentChunks }}"
