--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -157,8 +157,8 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: RMAN Target Output
-        run: echo environment_name_$TargetAccount_$TargetHost
-        
+        run: echo "environment_name_$TargetAccount_$TargetHost"
+
       # - name: Start Ansible Backup
       #   run: |
       #     $backup_command -i $inventory \
