env Target Account

--- a/.github/workflows/oracle-backup.yml
+++ b/.github/workflows/oracle-backup.yml
@@ -157,7 +157,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: RMAN Target Output
-        run: echo "environment_name_$TargetAccount"
+        run: echo environment_name_${{ env.TargetAccount }}_${{ env.TargetHost }}
 
       # - name: Start Ansible Backup
       #   run: |
