--- a/.github/workflows/oracle-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-schedule-dev-backup.yml
@@ -9,13 +9,31 @@ on:
     paths:
       - .github/workflows/oracle-schedule-dev-backup.yml
 jobs:
-  call-workflow:
+  prepare-workflow-call:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Parse Inputs
+        id: parseinputs
+        run: |
+          echo -n "env_matrix={\"include\":[" >> $GITHUB_OUTPUT
+          if [[ "${cron_time}" == '30 09 * * 1,2,4,5' ]]
+          then
+            echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"daily"},' >> $GITHUB_OUTPUT
+          #elif [[ "${cron_time}" == '30 06 * * 1' ]]
+          #then
+          #  echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"weekly"},' >> $GITHUB_OUTPUT
+          fi
+          echo "]}" >> $GITHUB_OUTPUT
+
+  run-workflow_call:
+    needs: prepare-workflow-call
     strategy:
-      matrix:
-        database_type: [delius]
+      matrix: ${{ fromJson(needs.prepare-workflow-call.outputs.env_matrix) }}
+      fail-fast: true
     uses: 
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-backup.yml@main
     with:
-      TargetHost: ${{ matrix.database_type }}_primarydb
-      Period: daily
+      TargetAccount: ${{ env_matrix.TargetAccount }}
+      TargetHost: ${{ env_matrix.TargetHost }}
+      Period: ${{ env_matrix.Period }}
     secrets: inherit
