--- a/.github/workflows/oracle-schedule-dev-backup.yml
+++ b/.github/workflows/oracle-schedule-dev-backup.yml
@@ -3,11 +3,11 @@ on:
   schedule:
     - cron: '30 09 * * 1,2,4,5'
     - cron: '30 06 * * 1'
-  push:
-    branches:
-      - DBA-511
-    paths:
-      - .github/workflows/oracle-schedule-dev-backup.yml
+  # push:
+  #   branches:
+  #     - DBA-511
+  #   paths:
+  #     - .github/workflows/oracle-schedule-dev-backup.yml
 jobs:
   prepare-workflow-call:
     runs-on: ubuntu-latest
@@ -17,9 +17,20 @@ jobs:
       - name: Parse parameters
         id: parseparameters
         run: |
-          echo -n "parameters_matrix={\"include\":[" >> $GITHUB_OUTPUT
-          echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"daily"}' >> $GITHUB_OUTPUT
-          echo "]}" >> $GITHUB_OUTPUT
+          if [[ "${GITHUB_EVENT_NAME}" == "schedule" ]]
+          then
+            echo -n "parameters_matrix={\"include\":[" >> $GITHUB_OUTPUT
+            cron_time="${{github.event.schedule}}"
+            if [[ "${cron_time}" == '30 09 * * 1,2,4,5' ]]
+            then
+              echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"daily"}' >> $GITHUB_OUTPUT
+            fi
+            if [[ "${cron_time}" == '30 06 * * 1' ]]
+            then
+              echo -n '{"TargetAccount":"delius_core_development_dev","TargetHost":"delius_primarydb","Period":"weekly"}' >> $GITHUB_OUTPUT
+            fi
+            echo "]}" >> $GITHUB_OUTPUT
+          fi
   run-workflow-call:
     needs: prepare-workflow-call
     strategy:
